--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
 Flask==3.1.0
+flask-cors==5.0.1
 Flask-Mail==0.10.0
 Flask-Session==0.8.0
 idna==3.10
@@ -13,6 +14,9 @@ itsdangerous==2.2.0
 Jinja2==3.1.5
 MarkupSafe==3.0.2
 msgspec==0.19.0
+pillow==11.1.0
+python-dateutil==2.9.0.post0
 requests==2.32.3
+six==1.17.0
 urllib3==2.3.0
 Werkzeug==3.1.3
